# url.shorten

./: .gitignore
client/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts
client/src/: App.vue
client/src/assets/: main.css
client/src/components/: Modal.vue
client/src/router/: index.js
client/src/views/: HomeView.vue
server/: .env.example  main.py  pyproject.toml
