[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.139.0",
    "hashids>=1.3.1",
    "python-dotenv>=1.2.2",
    "sqids>=0.5.2",
    "supabase>=2.31.0",
    "uvicorn>=0.50.2",
]

[tool.uv.workspace]
members = [
    "sqids",
    "fastapi",
]
